# Twitter-Clone-2026

./: .dockerignore  .gitignore  .gitlab-ci.yml  ARCHITECTURE.md  Dockerfile  Makefile  README.md  SECURITY.md  TROUBLESHOOTING.md  dashboard.json  entrypoint.sh  pyproject.toml  start.sh  test_db.db
.github/workflows/: main.yml
deploy/: docker-compose.prod.yml  docker-compose.yml
deploy/k8s/: 00-namespace.yaml  02-secrets.example.yaml  02-secrets.yaml  04-redis.yaml  07-backend.yaml  09-frontend.yaml  10-media-pvc.yaml  11-ingress.yaml  12-service-monitor.yaml
libs/: cache_keys.py  config.py  correlation_id.py  database.py  kafka_conf.py  logging_config.py  schemas.py
migrations/: env.py
migrations/versions/: 68cf89fc1c2c_initial_setup.py
scripts/: seed_db.py
services/feed/: main.py
services/gateway/: main.py
services/tweets/app/: models.py  schemas.py
services/tweets/app/api/: routes.py
services/users/app/: __init__.py  crud.py  models.py  schemas.py
services/users/app/api/: routes.py
tests/: conftest.py  test_api.py
twitter-clone-2026/: .dockerignore  .env  .env.example  .gitignore  .gitlab-ci.yml  .safety-project.ini  ARCHITECTURE.md  Dockerfile  Dockerfile.frontend  README.md  SECURITY.md  alembic.ini  locustfile.py  nginx.conf  pyproject.toml  start.sh
twitter-clone-2026/.github/workflows/: main.yml
twitter-clone-2026/deploy/: docker-compose.prod.yml  docker-compose.yml
twitter-clone-2026/deploy/k8s/: 01-configmap.yaml  02-secrets.example.yaml  03-postgres.yaml  05-kafka.yaml  06-seed-configmap.yaml  07-backend.yaml  09-frontend.yaml  11-ingress.yaml  backend-deployment.yaml  ingress.yaml  postgres.yaml  redis.yaml  secrets.yaml
twitter-clone-2026/libs/: __init__.py  auth.py  cache_keys.py  config.py  database.py  kafka_conf.py  redis_client.py  schemas.py
twitter-clone-2026/migrations/: env.py
twitter-clone-2026/migrations/versions/: 1bdb7cc3a519_add_api_key_hash_to_users.py  7dde99c4822b_initial_migration.py  9efaab4df790_add_tweets_media_and_likes_tables.py  af7f77367bd8_add_tweets_media_and_likes_tables.py
twitter-clone-2026/scripts/: seed_db.py
twitter-clone-2026/services/feed/: main.py
twitter-clone-2026/services/gateway/: main.py
twitter-clone-2026/services/tweets/app/: __init__.py  crud.py  models.py  schemas.py
twitter-clone-2026/services/tweets/app/api/: routes.py
twitter-clone-2026/services/users/app/: __init__.py  crud.py  models.py  schemas.py
twitter-clone-2026/services/users/app/api/: routes.py
twitter-clone-2026/stubs/locust/: __init__.pyi  events.pyi
twitter-clone-2026/tests/: conftest.py  test_api.py
