[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# ==========================================
# 1. Project Metadata (PEP 621)
# ==========================================
[project]
name = "twitter-clone-2026"
version = "0.1.0"
description = "A microservices-based Twitter clone backend using FastAPI, Kafka, and K8s"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "you@example.com"},
]

# ==========================================
# 2. Dependencies
# ==========================================
dependencies = [
    # FastAPI & Server
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    
    # Database
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.30.0",       # Async Postgres driver
    "alembic>=1.13.0",       # Migrations
    "greenlet>=3.1.0",       # Required for SQLAlchemy async
    
    # faststream & Redis
    "faststream[kafka]>=0.5.0",
    "redis>=5.2.1",
    
    # Utils
    "python-multipart>=0.0.26", # For file uploads
    "aiofiles>=24.1.0",         # Async file I/O

    "faker>=40.11.1",  # Для генерации тестовых данных

    "structlog>=25.0.0", # Современное логирование

    "prometheus-fastapi-instrumentator>=7.1.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",        # Плагин для покрытия в pytest
    "httpx>=0.27.0",          # Async client for tests
    "coverage[toml]>=7.6.0",
    "aiosqlite>=0.20.0",      # SQLite driver for testing in CI

    # Linting & Types
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    
    # Stubs for mypy
    "types-redis>=4.6.0",
    "types-aiofiles>=24.1.0",

    # Security Tools
    "bandit>=1.9.4",
    "safety>=3.7.0",
    "locust>=2.43.3",

]

# ==========================================
# 3. Ruff Settings (Lint + Format)
# ==========================================
[tool.ruff]
line-length = 88
target-version = "py313"

# Exclude generated migration files and cache
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "migrations/versions/*", # Alembic sometimes generates "dirty" code
]

[tool.ruff.lint]
select = [
    "E", "W",  # Pycodestyle errors & warnings
    "F",        # Pyflakes
    "I",        # Isort
    "B",        # Flake8-bugbear
    "C90",      # Complexity
]

# Ignore specific errors if needed
ignore = [
    "E501",     # Long lines (sometimes in tests or migrations)
]

[tool.ruff.format]
# Formatting settings (Black replacement)
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

# ==========================================
# 4. Mypy Settings
# ==========================================
[tool.mypy]
python_version = "3.13"
strict = true
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]
explicit_package_bases = true
mypy_path = "stubs"

# Ignore migrations as they are auto-generated
[[tool.mypy.overrides]]
module = "migrations.*"
ignore_errors = true


# ==========================================
# 5. Pytest Settings
# ==========================================
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
# Filter warnings to keep output clean
filterwarnings = [
    "ignore::DeprecationWarning",
]

# ==========================================
# 6. Coverage Settings
# ==========================================
[tool.coverage.run]
source = ["services", "libs"] # What to check
omit = [
    "*/tests/*",
    "*/migrations/*",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]

[tool.hatch.build.targets.wheel]
packages = ["libs", "services"]

# ==========================================
# 7. bandit Settings
# ==========================================

[tool.bandit]
exclude_dirs = ["tests", "scripts", ".venv", "*/tests/*", "locustfile.py"]