[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# ==========================================
# 1. Метаданные проекта (PEP 621)
# ==========================================
[project]
name = "twitter-clone-2026"
version = "0.1.0"
description = "A microservices-based Twitter clone backend using FastAPI, Kafka, and K8s"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "you@example.com"},
]

# ==========================================
# 2. Зависимости
# ==========================================
dependencies = [
    # FastAPI & Server
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    
    # Database
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.30.0",       # Асинхронный драйвер Postgres
    "alembic>=1.13.0",       # Миграции
    "greenlet>=3.1.0",       # Нужен для SQLAlchemy async
    
    # Kafka & Redis (подготовка к 2-й неделе)
    "aiokafka>=0.11.0",
    "redis>=5.1.0",
    
    # Utils
    "python-multipart>=0.0.12", # Для загрузки файлов
    "aiofiles>=24.1.0", # Асинхронное файловое чтение/запись
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",          # Асинхронный клиент для тестов
    "coverage[toml]>=7.6.0",

    # Linting & Types
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    
    # Stubs для mypy
    "types-redis>=4.6.0",
]

# ==========================================
# 3. Настройки Ruff (Lint + Format)
# ==========================================
[tool.ruff]
line-length = 88
target-version = "py313"

# Исключаем сгенерированные файлы миграций и кэш
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "migrations/versions/*", # Alembic генерирует иногда "грязный" код
]

[tool.ruff.lint]
select = [
    "E", "W",  # Pycodestyle errors & warnings
    "F",        # Pyflakes
    "I",        # Isort
    "B",        # Flake8-bugbear
    "C90",      # Complexity
]

# Игнорируем конкретные ошибки, если нужно
ignore = [
    "E501",     # Длинные строки (иногда в тестах или миграциях)
]

[tool.ruff.format]
# Настройки форматирования (замена Black)
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

# ==========================================
# 4. Настройки Mypy
# ==========================================
[tool.mypy]
python_version = "3.13"
strict = true
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]
explicit_package_bases = true

# Игнорируем миграции, так как они генерируются автоматически
[[tool.mypy.overrides]]
module = "migrations.*"
ignore_errors = true

# ==========================================
# 5. Настройки Pytest
# ==========================================
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
# Фильтруем ворнинги, чтобы не засоряли вывод
filterwarnings = [
    "ignore::DeprecationWarning",
]

# ==========================================
# 6. Настройки Coverage
# ==========================================
[tool.coverage.run]
source = ["services", "libs"] # Что проверять
omit = [
    "*/tests/*",
    "*/migrations/*",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]

[tool.hatch.build.targets.wheel]
packages = ["libs", "services"]